<resources>
    <string name="app_name">NewsApp</string>
    <string name="searchEditText">Search...</string>
    <string name="article">Article</string>
    <string name="news">News</string>
    <string name="chooselanguage">Choose Language</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="country">CountryNews</string>
    <string name="welcome_to_news_app">Welcome TO News App</string>
    <string name="please_choose_language_and_country">Please Choose Language and country</string>
    <string name="home">Home</string>
    <string name="saved_news">SavedNews</string>
    <string name="search_news">SearchNews</string>
    <string name="choose_country">Choose Country</string>
    <string name="egypt">EGYPT</string>
    <string name="usa">USA</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="breaking_news">Breaking News</string>
    <string name="deleteArticle">Successfully deleted article</string>
    <string name="undo">Undo</string>
</resources>
